2010-01-18  Marek Habersack  <mhabersack@novell.com>

	* Parameter.cs: added missing 3.5 APIs - constructors taking
	DbType as one of the parameters, ConvertDbTypeToTypeCode,
	ConvertTypeCodeToDbType and GetDatabaseType. Fixes bug #567850

2010-01-15  Marek Habersack  <mhabersack@novell.com>

	* ChangePassword.cs: BaseChangePasswordContainer forwards
	EnsureChildControls call to its owner, so that finding controls in
	the container works correctly.

2009-11-30  Marek Habersack  <mhabersack@novell.com>

	* WebControl.cs: HasAttributes made available as internal for 1.1
	Avoid calling the Attributes getter many times in
	CopyBaseAttributes.
	If TrackViewState is called and attributes state bag already
	exists, mark all items in the latter as dirty.

	* CheckBox.cs, Button.cs, ImageButton.cs, LinkButton.cs: do not
	create the Attributes collection if not necessary.

2009-11-16  Marek Habersack  <mhabersack@novell.com>

	* TreeNodeCollection.cs: whenever a node is added, let the owner
	know about it.

	* TreeNode.cs: added internal property HadChildrenBeforePopulating
	which is used to let TreeView know about an error condition where
	a populate-on-demand node contains children added outside the
	OnTreeNodePopulate event

	* TreeView.cs: if a node has any child nodes and PopulatOnDemand
	is set, throw an exception from RenderNode. This is the behavior
	of .NET

2009-11-13  Marek Habersack  <mhabersack@novell.com>

	* TableRowCollection.cs: added .NET compatibility NREX throws to
	several methods.
	Whenever a row is added/removed, its Container property is
	set. Fixes bug #551666

	* TableRow.cs: introduced an internal property, Container, which
	is set by TableRowCollection whenever this row is added/removed
	to/from the collection. This allows the row to notify the
	collectio and, in consequence, collection owner that TableSection
	has been set and thead/tbody/tfoot elements need to be
	generated. Fixes bug #551666

2009-11-10  Marek Habersack  <mhabersack@novell.com>