@@ -1226,6 +1226,7 @@ namespace System.Web.UI.WebControls
 		{
 			linkStyle.CopyTextStylesFrom (baseStyle);
 			linkStyle.BorderStyle = BorderStyle.None;
+			linkStyle.AddCssClass (baseStyle.CssClass);
 			baseStyle.Font.Reset ();
 			RegisterStyle (linkStyle);
 			RegisterStyle (baseStyle);
@@ -1715,6 +1716,12 @@ namespace System.Web.UI.WebControls
 					style.AddCssClass (nodeLinkStyle.CssClass);
 					style.AddCssClass (nodeLinkStyle.RegisteredCssClass);
 				}
+
+				if (levelLinkStyles != null && levelLinkStyles.Count > level) {
+					style.AddCssClass (levelLinkStyles [level].CssClass);
+					style.AddCssClass (levelLinkStyles [level].RegisteredCssClass);
+				}
+				
 				if (node.IsLeafNode) {
 					if (leafNodeStyle != null) {
 						style.AddCssClass (leafNodeLinkStyle.CssClass);
@@ -1731,10 +1738,7 @@ namespace System.Web.UI.WebControls
 						style.AddCssClass (parentNodeLinkStyle.RegisteredCssClass);
 					}
 				}
-				if (levelStyles != null && levelStyles.Count > level) {
-					style.AddCssClass (levelLinkStyles [level].CssClass);
-					style.AddCssClass (levelLinkStyles [level].RegisteredCssClass);
-				}
+				
 				if (nodeIsSelected) {
 					style.AddCssClass (selectedNodeLinkStyle.CssClass);
 					style.AddCssClass (selectedNodeLinkStyle.RegisteredCssClass);
@@ -1744,6 +1748,10 @@ namespace System.Web.UI.WebControls
 				style.CopyFrom (ControlLinkStyle);
 				if (nodeStyle != null)
 					style.CopyFrom (nodeLinkStyle);
+
+				if (levelLinkStyles != null && levelLinkStyles.Count > level)
+					style.CopyFrom (levelLinkStyles [level]);
+				
 				if (node.IsLeafNode) {
 					if (node.IsLeafNode && leafNodeStyle != null) {
 						style.CopyFrom (leafNodeLinkStyle);
@@ -1757,8 +1765,7 @@ namespace System.Web.UI.WebControls
 						style.CopyFrom (parentNodeLinkStyle);
 					}
 				}
-				if (levelStyles != null && levelStyles.Count > level)
-					style.CopyFrom (levelLinkStyles [level]);
+				
 				if (nodeIsSelected)
 					style.CopyFrom (selectedNodeLinkStyle);
 				style.AlwaysRenderTextDecoration = true;
